# restaurants

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile.dev  LICENSE.txt  README.md  README.rst  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
checks/: check_this.py
config/: config.yml
docs/: conf.py  index.rst  requirements.txt
restaurants/: app.py
restaurants/api/: restaurants.py
restaurants_api/: .env  __init__.py  app.py  schemas.py
restaurants_api/api/: __ini__.py  resource_detector.py  restaurants.py
restaurants_api/models/: owner.py  restaurant.py
src/store_api/: .flaskenv  __init__.py  app.py  db.py  skeleton.py  store.py  swagger.yml
src/store_api/api/: __init__.py  itemsview.py  storesview.py
tests/: conftest.py  test_skeleton.py  test_store.py
