[tool.poetry]
name = "restaurant-api"
version = "0.1.0"
description = ""
authors = ["Keyproco <oussama.keddar@epitech.eu>"]
readme = "README.md"
packages = [{include = "restaurant_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask-smorest = "^0.40.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
